--- a/dockerfile_dz
+++ b/dockerfile_dz
@@ -1,13 +1,16 @@
 FROM ubuntu:latest
 RUN apt-get update
 RUN apt-get install -y tomcat8
-#ENV CATALINA_HOME="/usr/share/tomcat8"
-RUN mkdir -p /usr/share/tomcat8/conf && cp -R /etc/tomcat8/* /usr/share/tomcat8/conf
+ENV CATALINA_HOME /usr/share/tomcat8
+ENV PATH $CATALINA_HOME/bin:$PATH
+RUN mkdir -p $CATALINA_HOME/conf && cp -R /etc/tomcat8/* $CATALINA_HOME/conf
 RUN apt-get install -y maven
 RUN apt-get install -y git
 RUN cd /opt/;git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
 RUN cd /opt/boxfuse-sample-java-war-hello/;mvn package
-RUN mkdir /usr/share/tomcat8/webapps/ && cp /opt/boxfuse-sample-java-war-hello/target/hello-1.0.war /usr/share/tomcat8/webapps/hello-1.0.war
+RUN mkdir $CATALINA_HOME/webapps/ && cp /opt/boxfuse-sample-java-war-hello/target/hello-1.0.war $CATALINA_HOME/webapps/hello-1.0.war
 
 EXPOSE 8080
-CMD ["/usr/share/tomcat8/bin/catalina.sh", "run"]
+CMD ["catalina.sh", "run"]
+
+
